--- a/Scoreboard/ToDo
+++ b/Scoreboard/ToDo
@@ -6,3 +6,5 @@
 6: Add more Variables (almost done)
 7: PvP/E displayed on Signs (done with help of InSigns)
 8: Different types of Scoreboard instances can be displayed
+9: Compatible with Survival Games
+10: compatible variables with Paintball (I hate that obfuscated code, but I can make it)
