--- a/Scoreboard/ToDo
+++ b/Scoreboard/ToDo
@@ -9,3 +9,7 @@
 9: Compatible with Survival Games
 10: compatible variables with Paintball (I hate that obfuscated code, but I can make it)
 11: Cache-System against servers with bad database connections
+12: make it compatible with MobArena
+13: and Jobs too
+14: Add Bungee varialbes support
+15: Add a new variable for mcMMO that displayed the need xp for the next value
