--- a/Scoreboard/ToDo
+++ b/Scoreboard/ToDo
@@ -13,3 +13,5 @@
 13: and Jobs too
 14: Add Bungee varialbes support
 15: Add a new variable for mcMMO that displayed the need xp for the next value
+16: try to add the leaderboard in the scoreboard
+17: Add Heroes support
