--- a/Scoreboard/ToDo
+++ b/Scoreboard/ToDo
@@ -11,7 +11,7 @@
 11: Cache-System against servers with bad database connections
 12: make it compatible with MobArena
 13: and Jobs too
-14: Add Bungee varialbes support
-15: Add a new variable for mcMMO that displayed the need xp for the next value
-16: try to add the leaderboard in the scoreboard
+14: Add Bungee variables support
+15: Add a new variable for mcMMO that displayed the need xp for the next level
+16: try to add the leaderboard from mcMMO in the scoreboard
 17: Add Heroes support
