--- a/Scoreboard/ToDo
+++ b/Scoreboard/ToDo
@@ -15,3 +15,4 @@
 15: Add a new variable for mcMMO that displayed the need xp for the next level
 16: try to add the leaderboard from mcMMO in the scoreboard
 17: Add Heroes support
+18: make independent from InSigns
