--- a/Scoreboard/ToDo
+++ b/Scoreboard/ToDo
@@ -5,3 +5,4 @@
 : make independent from InSigns
 : Add Survival Games, Jobs, Heroes, MobArena, Bungee, Factions, Towny and Paintball support
 : Add killstreaks
+: decrease packets
