--- a/Scoreboard/ToDo
+++ b/Scoreboard/ToDo
@@ -6,3 +6,4 @@
 : Add Survival Games, Jobs, Heroes, MobArena, Bungee, Factions, Towny and Paintball support
 : Add killstreaks
 : decrease packets
+: Make it reload compatible
