--- a/ToDo
+++ b/ToDo
@@ -1,15 +1,19 @@
 - 0.5
 
-: decrease packets
+: Add some special characters like hearts
 
 - 0.6
+
+: decrease packets
+
+- 0.7
 
 : make independent from InSigns
 : Factions support
 : Bungee support
 : Add Permission
 
-- 0.7
+- 0.8
 
 : Make it reload compatible
 : Command for disabling the Scoreboard
@@ -19,7 +23,7 @@
 : Add Jobs support
 : Paintball support
 
-- 0.8
+- 0.9
 
 : Different types of Scoreboard instances should be displayed via commands or in intervalls
 : mcMMO leaderboard support
