Hide vanished players from the online value

--- a/ToDo
+++ b/ToDo
@@ -1,3 +1,7 @@
+- done for next update
+
+: Hide vanished player from the online value
+
 -high priority
 
 : Add some special characters like hearts
