Former-commit-id: 5d80061c19e7408a36ed5c0e2b69d120aadf879a [formerly 5fe4acf06d13d02fd26a1d07fc8d1df3d8a54ebe] Former-commit-id: 5d55c8bfe91ff4d984fc1052fc3ae193dc62de07

--- a/ToDo
+++ b/ToDo
@@ -1,5 +1,6 @@
 -high priority
 
+: compatible with other scoreboard plugins
 : Add some special characters like hearts
 : Factions support
 : Bungee support
