Title can now be longer (32 characters)
Former-commit-id: a5ccab90c64e59b482a9b1c98d88eb69b0d9c4f4 [formerly d9dd795ecf00e276a559be39c23b8f86558aa44c]
Former-commit-id: 4eaf1ba4dda6942ccaa9ab199772fa7dc5eef3b5

--- a/changelog
+++ b/changelog
@@ -2,3 +2,4 @@
 * Add used ram in percent
 * Fix one variable
 * Round the kdr
+* The title can now be longer than 16 characters. You can now make title that have up to 32 characters
