--- a/changelog
+++ b/changelog
@@ -1,3 +1,5 @@
+Current changelog. This will be updated after every big change
+
 * Add console colour support
 * Fix round the tps
 * Fix factions compatiblity
