* Adding SQL-Configuration * Increasing maxConnections
Former-commit-id: c14346b883a0cd9899366f2d66411d68a979b2e1 [formerly e9dfa2dd95a2db8b212da1a346df27416e45fa04]
Former-commit-id: f4de338e500b183b7281e7e4b3e1c6e4e55fc343

--- a/changelog
+++ b/changelog
@@ -1,9 +1,6 @@
 Current changelog. This will be updated after every big change
 
-* Add console colour support
-* Fix round the tps
-* Fix factions compatiblity
-* Add amour variables
-* Fix SimpleClans 2 issue
-* FIx length issue
-* Rounding the stuff from other plugins
+* Fix NPE on death
+* Adding ebean.properties
+* Adding SQL-Configuration
+* Increasing maxConnections
