--- a/changelog
+++ b/changelog
@@ -1,6 +1,9 @@
 Current changelog. This will be updated after every big change
 
-* Fix NPE on death
-* Adding ebean.properties
-* Adding SQL-Configuration
-* Increasing maxConnections
+* Change: Update with the newest craftbukkit build
+* Change: Increasing maxConnections
+* Change: Unregister the listeners on disabling
+* Add: SQL-Configuration
+* Fix: NPE on death
+* Fix: ebean.properties not found
+* Fix: dived by zero exception
