--- a/changelog
+++ b/changelog
@@ -1,2 +1,4 @@
 Current changelog. This will be updated after every big change
 
+* Fix: Setting the configuration correctly after a reload
+* Fix: checking the scoreboard length rightly
