--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -16,3 +16,7 @@ toManyItems=One Scoreboard can't have more than 15 items
 toLongName={0} was longer than the limit of {1} characters. This plugin will now cut automatically to the right size.
 replacerException=In Replacer: {0} occurred an error. So it will be removed to prevent future errors
 noRegister=Couldn't register default listeners"
+
+disconnectPlayer=Can't set scoreboard: {0}
+unknownVariableException=unknown variable: {0}
+databaseFindException=While database finding: {0}
