Fix plugin compatibillity + Add Update enabled check

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -15,8 +15,7 @@ databaseConfigSaveError=Error while trying to save the sql.yml
 toManyItems=One Scoreboard can't have more than 15 items
 toLongName={0} was longer than the limit of {1} characters. This plugin will now cut automatically to the right size.
 replacerException=In Replacer: {0} occurred an error. So it will be removed to prevent future errors
+unsupportedPluginVersion=The Replacer: {0} can't be registered because that plugin version isn't supported (This Plugin will now ignore the replacer and continue without it)
 noRegister=Couldn't register default listeners"
 
-disconnectPlayer=Can't set scoreboard: {0}
-unknownVariableException=unknown variable: {0}
-databaseFindException=While database finding: {0}
+debugException=Exception occurred: {0}
