--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -12,10 +12,12 @@ unknownVariable=Couldn't replace variable with name: '{0}' Maybe you misspelled 
 newDatabase=Can't find an existing Database, so creating a new one
 synchLoading=Synch loading of playerstats
 databaseConfigSaveError=Error while trying to save the sql.yml
-toManyItems=One Scoreboard can't have more than 15 items
-toLongName={0} was longer than the limit of {1} characters. This plugin will now cut automatically to the right size.
+tooManyItems=One Scoreboard can't have more than 15 items
+notEnoughItems=A scoreboard can only displays 1 up to 15 items
+tooLongName={0} was longer than the limit of {1} characters. This plugin will now cut automatically to the right size.
 replacerException=In Replacer: {0} occurred an error. So it will be removed to prevent future errors
 unsupportedPluginVersion=The Replacer: {0} can't be registered because that plugin version isn't supported (This Plugin will now ignore the replacer and continue without it)
 noRegister=Couldn't register default listeners"
 
+#This is used for testing the plugin
 debugException=Exception occurred: {0}
