--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -17,7 +17,9 @@ notEnoughItems=A scoreboard have to display min. 1 item ({0})
 tooLongName={0} was longer than the limit of {1} characters. This plugin will now cut automatically to the right size.
 replacerException=In Replacer: {0} occurred an error. So it will be removed to prevent future errors
 unsupportedPluginVersion=The Replacer: {0} can't be registered because that plugin version isn't supported (This Plugin will now ignore the replacer and continue without it)
-noRegister=Couldn't register default listeners"
+noRegister=Couldn't register default listeners
+
+copyLanguageEx=Couldn't copy the messages fiel because {0}
 
 #This is used for testing the plugin
 debugException=Exception occurred: {0}
