--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -10,16 +10,18 @@ onUpdate=A new update is available and will be install after a reload or restart
 
 unknownVariable=Couldn't replace variable with name: '{0}' Maybe you misspelled it or the replacer isn't available yet
 newDatabase=Can't find an existing Database, so creating a new one
+savingStats=Now saving the stats to the database. This can take a while.
+reloadDatabase=Reloading of the database settings is currently not supported. Please perform a complete restart to use them (if you change something on it)
 synchLoading=Synch loading of playerstats
 databaseConfigSaveError=Error while trying to save the sql.yml
 tooManyItems=One Scoreboard can't have more than 15 items
 notEnoughItems=A scoreboard have to display min. 1 item ({0})
 tooLongName={0} was longer than the limit of {1} characters. This plugin will now cut automatically to the right size.
-replacerException=In Replacer: {0} occurred an error. So it will be removed to prevent future errors
+replacerException=In Replacer: {0} occurred an error. So it will be removed to prevent future errors {0}
 unsupportedPluginVersion=The Replacer: {0} can't be registered because that plugin version isn't supported (This Plugin will now ignore the replacer and continue without it)
-noRegister=Couldn't register default listeners
+noRegister=Couldn't register default listeners {0}
 
-copyLanguageEx=Couldn't copy the messages fiel because {0}
+copyLanguageEx=Couldn't copy the messages file because {0}
 
 #This is used for testing the plugin
 debugException=Exception occurred: {0}
