Fix class not found by ebean
Former-commit-id: 39c9a58cf7d788c58153660c526d3c61ce93394b [formerly e8612457854ee37d727b11d583e9a4d329444321]
Former-commit-id: fb8436c504bddd74e24125d965b0344231ee9f5c

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -22,6 +22,7 @@ unsupportedPluginVersion=The Replacer: {0} can't be registered because that plug
 noRegister=Couldn't register default listeners {0}
 
 copyLanguageEx=Couldn't copy the messages file because {0}
+changeChageEx=Couldn't disable cache system for classes. This can cause some invalid initialization {0}
 
 #This is used for testing the plugin
 debugException=Exception occurred: {0}
