Add missing changes

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,7 +2,7 @@
 
 noCompatibleVersion=Scoreboards are only supported in 1.5 or above
 noPermission=\u00a74\u2716 You don't have enough permissions to do that \u2716
-noConsole=\u00a74This command can't be executed by a console
+noConsole=\u00a74This command can't be executed from a console
 
 onToggle=\u00a7aToggling the scoreboard
 onReload=\u00a7a\u2714 The configuration was successfully reloaded \u2714
