--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,6 +3,7 @@
 noCompatibleVersion=Scoreboards are only supported in 1.5 or above
 noPermission=\u00a74\u2716 You don't have enough permissions to do that \u2716
 noConsole=\u00a74This command can't be executed from a console
+notNumber=\u00a74This is not a number
 
 onToggle=\u00a7aToggling the scoreboard
 onReload=\u00a7a\u2714 The configuration was successfully reloaded \u2714
@@ -22,4 +23,4 @@ unsupportedPluginVersion=The Replacer: {0} can't be registered because that plug
 noRegister=Couldn't register default listeners
 
 copyLanguageEx=Couldn't copy the messages file because
-changeChageEx=Couldn't disable cache system for classes. This can cause some invalid initialization
+changeEx=Couldn't disable cache system for classes. This can cause some invalid initialization
