--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,17 +2,16 @@
 
 noCompatibleVersion=Scoreboards are only supported in 1.5 or above
 noPermission=\u00a74\u2716 You don't have enough permissions to do that \u2716
+noPermissionSign=\u00a74\u2716 You don't have enough permissions to create a sign with this variable \u2716
 noConsole=\u00a74This command can't be executed from a console
-notNumber=\u00a74This is not a number
-
 onToggle=\u00a7aToggling the scoreboard
 onReload=\u00a7a\u2714 The configuration was successfully reloaded \u2714
-onUpdate=A new update is available and will be install after a reload or restart \n\t Thanks to Gravity for his great work
+onUpdate=A new update is available and will be install after a reload or restart \n Thanks to Gravity for his great work
+missingProtocolLib=You need the plugin http://dev.bukkit.org/bukkit-plugins/protocollib/ for compatibilityMode
+missingVariableSymbol=The variable {0} has to contains % at the beginning and one % on the end
 
 unknownVariable=Couldn't replace variable with name: '{0}' Maybe you misspelled it or the replacer isn't available yet
-newDatabase=Can't find an existing Database, so creating a new one
 savingStats=Now saving the stats to the database. This can take a while.
-reloadDatabase=Reloading of the database settings is currently not supported. Please perform a complete restart to use them (if you change something on it)
 synchLoading=Synch loading of playerstats
 databaseConfigSaveError=Error while trying to save the sql.yml
 tooManyItems=One Scoreboard can't have more than 15 items
@@ -22,5 +21,4 @@ replacerException=In Replacer: {0} occurred an error. So it will be removed to p
 unsupportedPluginVersion=The Replacer: {0} can't be registered because that plugin version isn't supported \n\t({1})
 noRegister=Couldn't register default listeners
 
-copyLanguageEx=Couldn't copy the messages file because
 changeEx=Couldn't disable cache system for classes. This can cause some invalid initialization
