Fail safely on missing drivers  (fixes #32) + Glowstone improvement  (no packet spamming)+ 1.8 support

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -11,7 +11,7 @@ missingProtocolLib=You need the plugin http://dev.bukkit.org/bukkit-plugins/prot
 missingVariableSymbol=The variable {0} has to contains % at the beginning and one % on the end
 
 unknownVariable=Couldn't replace variable with name: '{0}' Maybe you misspelled it or the replacer isn't available yet
-savingStats=Now saving the stats to the database. This can take a while.
+savingStats=Now saving the stats to the database. This could take a while.
 databaseConfigSaveError=Error while trying to save the sql.yml
 tooManyItems=One Scoreboard can't have more than 15 items
 notEnoughItems=A scoreboard have to display min. 1 item ({0})
