--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,7 +3,7 @@
 noCompatibleVersion=Scoreboards are only supported in 1.5 or above
 noPermission=\u00a74\u2716 You don't have enough permissions to do that \u2716
 noPermissionSign=\u00a74\u2716 You don't have enough permissions to create a sign with this variable \u2716
-noConsole=\u00a74This command can't be executed from a console
+noConsole=\u00a74This command can only be executed by Players
 onToggle=\u00a7aToggling the scoreboard
 onReload=\u00a7a\u2714 The configuration was successfully reloaded \u2714
 onUpdate=A new update is available and will be install after a reload or restart \n Thanks to Gravity for his great work
