Cleanup + more work on the replace engine

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,22 +1,21 @@
-#All messages
+# All messages
 
 noCompatibleVersion=Scoreboards are only supported in 1.5 or above
 noPermission=\u00a74\u2716 You don't have enough permissions to do that \u2716
-noPermissionSign=\u00a74\u2716 You don't have enough permissions to create a sign with this variable \u2716
 noConsole=\u00a74This command can only be executed by Players
 onToggle=\u00a7aToggling the scoreboard
 onReload=\u00a7a\u2714 The configuration was successfully reloaded \u2714
 onUpdate=A new update is available and will be install after a reload or restart \n Thanks to Gravity for his great work
-missingProtocolLib=You need the plugin http://dev.bukkit.org/bukkit-plugins/protocollib/ for compatibilityMode
+missingProtocolLib=You need http://dev.bukkit.org/bukkit-plugins/protocollib/ for compatibilityMode
 missingVariableSymbol=The variable {0} has to contains % at the beginning and one % on the end
 
-unknownVariable=Couldn't replace variable with name: '{0}' Maybe you misspelled it or the replacer isn't available yet
+unknownVariable=Cannot find variable with name: ({0}) Maybe you misspelled it or the replacer isn't available yet
 savingStats=Now saving the stats to the database. This could take a while.
-databaseConfigSaveError=Error while trying to save the sql.yml
+databaseConfigSaveError=Error while saving the sql.yml
 tooManyItems=One Scoreboard can't have more than 15 items
 notEnoughItems=A scoreboard have to display min. 1 item ({0})
 tooLongName={0} was longer than the limit of {1} characters. This plugin will now cut automatically to the right size.
-replacerException=In Replacer: {0} occurred an error. So it will be removed to prevent future errors
+replacerException=Replacer occurred an error: {0} So it will be removed to prevent future errors
 unsupportedPluginVersion=The Replacer: {0} can't be registered because that plugin version isn't supported \n\t({1})
 noRegister=Couldn't register default listeners
 
