--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,8 +14,8 @@ databaseConfigSaveError=Error while saving the sql.yml
 tooManyItems=One Scoreboard can't have more than 15 items
 notEnoughItems=A scoreboard have to display min. 1 item ({0})
 tooLongName={0} was longer than the limit of {1} characters. This plugin will now cut automatically to the right size.
-replacerException=Replacer occurred an error: {0} So it will be removed to prevent future errors
+replacerException=Replacer occurred an error: {0} for {1} So it will be removed to prevent future errors
 unsupportedPluginVersion=The Replacer: {0} can't be registered because that plugin version isn't supported \n\t({1})
-noRegister=Couldn't register default listeners
+noRegister=Couldn't register default listener: {0}
 
 changeEx=Couldn't disable cache system for classes. This can cause some invalid initialization
